Fixing link line wrapping.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -406,7 +406,6 @@ footer {
 
 .article-content a {
   color: #111;
-  display: inline-block;
   text-decoration: underline;
 }
 
